--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@usedapp/core": "^1.2.7",
     "@usedapp/portis-connector": "^1.0.0",
     "@usedapp/wallet-connect-connector": "^1.0.1",
+    "@usedapp/wallet-connect-v2-connector": "^1.0.4",
+    "dotenv": "^16.3.1",
     "ethers": "5.7.2",
     "framer-motion": "^6.2.9",
+    "path-browserify": "^1.0.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.8.0",
